--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -37,6 +37,6 @@ jobs:
         python3 download_device_documents.py --since=2021-12-01 --dst-folder=raw
     - uses: 'google-github-actions/upload-cloud-storage@v0'
       with:
-        path: 'raw'
+        path: 'medical-device-predicate-graph/raw'
         destination: 'fda_devices/raw'
         parent: 'false'
