--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -4,10 +4,10 @@
 name: Python application
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron: '15 5 * * *'
 
 jobs:
   build:
