--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -1,13 +1,14 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Downloading and uploading FDA 510k Device Summaries
 
 on:
   pull_request:
     branches: [ master ]
+  # Run at 1:11 AM UTC on Sat / 8:11 PM EST on Fri
   schedule:
-    - cron: '30 17 * * *'
+    - cron: '11 1 * * 6'
   workflow_dispatch:
     inputs:
       since_date:
