--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -29,10 +29,14 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.7"
-    - name: Install dependencies
+    - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install linux dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install poppler-utils ocrmypdf
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0'
