Convert device summary PDFs to text (#5)
- Create a script for converting PDF documents to text using `pdftotext` and `ocrmypdf`
- Run this script during the weekly Github Action that pulls down new device summaries.

--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -29,16 +29,20 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.7"
-    - name: Install dependencies
+    - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install linux dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install poppler-utils ocrmypdf
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0'
       with:
         credentials_json: '${{ secrets.gcp_credentials }}'
-    - name: Download new fda device documents
+    - name: Download new fda device summary documents
       run: |
         cd medical-device-predicate-graph
         export MONTH_AGO=$(date -d "-1 month" +%Y-%m-%d)
@@ -46,8 +50,19 @@ jobs:
         python3 download_device_documents.py --since="$SINCE_DATE" --dst-folder=raw --dry-run=False
       env:
         SINCE_DATE: ${{ github.event.inputs.since_date }}
-    - uses: 'google-github-actions/upload-cloud-storage@v0'
+    - name: Convert new fda device summary documents to text
+      run: |
+        cd medical-device-predicate-graph
+        python3 convert_pdf_to_text.py --src-dir=raw --dst-dir=text --dry-run=False
+    - name: Upload device summary PDFs to Google Cloud storage
+      uses: 'google-github-actions/upload-cloud-storage@v0'
       with:
         path: 'medical-device-predicate-graph/raw'
         destination: 'fda_devices/raw'
+        parent: 'false'
+    - name: Upload device summary text files to Google Cloud storage
+      uses: 'google-github-actions/upload-cloud-storage@v0'
+      with:
+        path: 'medical-device-predicate-graph/text'
+        destination: 'fda_devices/text'
         parent: 'false'
