--- a/apache-beam-text-pipeline/Dockerfile
+++ b/apache-beam-text-pipeline/Dockerfile
@@ -1,8 +1,13 @@
 FROM apache/beam_python3.7_sdk:2.36.0
 
-RUN apt install build-essential
-RUN apt install libpoppler-cpp-dev
-RUN apt install pkg-config
-RUN apt install ocrmypdf
+RUN apt update
+RUN apt install -y build-essential
+RUN apt install -y libpoppler-cpp-dev
+RUN apt install -y pkg-config
+RUN apt install -y ocrmypdf
 
-RUN pip3 install pdftotext
+RUN pip3 install pdftotext google-cloud-storage==2.1.0
+
+COPY main.py /main.py
+
+ENTRYPOINT [ "/opt/apache/beam/boot" ]
