--- a/.github/workflows/extract-device-summaries.yml
+++ b/.github/workflows/extract-device-summaries.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Download all device text files, generate graph and persist graph to Google Cloud Storage.
         run: |
           cd medical-device-predicate-graph
-          ./extract_predicates text
           gsutil -m cp --recursive 'gs://fda_devices/text/*' text
+          ./extract_predicates.sh text
           python3 analyze_graph.py
           gsutil -m cp  graph.json 'gs://fda_devices/graph.json'
