--- a/.github/workflows/extract-device-summaries.yml
+++ b/.github/workflows/extract-device-summaries.yml
@@ -1,10 +1,10 @@
 name: Downloading and uploading FDA 510k Device Summaries
 
 on:
-  # Only run when we change the extract scripts
+  # Only run when the medical-device-predicate-graph project changes
   push:
     paths:
-      - "medical-device-predicate-graph/*.py"
+      - "medical-device-predicate-graph/*"
 
   # Run at 1:11 AM UTC on Sat / 8:11 PM EST on Fri
   schedule:
