--- a/.github/workflows/extract-device-summaries.yml
+++ b/.github/workflows/extract-device-summaries.yml
@@ -4,7 +4,7 @@ on:
   # Only run when the medical-device-predicate-graph project changes
   push:
     paths:
-      - "medical-device-predicate-graph/*"
+      - "medical-device-predicate-graph/**"
 
   # Run at 1:11 AM UTC on Sat / 8:11 PM EST on Fri
   schedule:
