--- a/.github/workflows/extract-device-summaries.yml
+++ b/.github/workflows/extract-device-summaries.yml
@@ -68,7 +68,19 @@ jobs:
       - name: Download all device text files, generate graph and persist graph to Google Cloud Storage.
         run: |
           cd medical-device-predicate-graph
-          gsutil -m cp 'gs://fda_devices/text/*' text
-          ./extract_predicates.sh text
+          gcloud auth activate-service-account --key-file "$GOOGLE_APPLICATION_CREDENTIALS"
+
+          # Don't process if no new text files
+          if [ -z "$(ls -A text)" ]; then
+            exit 0
+          fi
+
+          # Copy down the current graph and add edges for new devices
+          echo "copying down graph"
+          gsutil -m cp 'gs://fda_devices/graph.json' current_graph.json
+          echo "extracting predicates"
+          bash extract_predicates.sh text
+          echo "Analyzing graph"
           python3 analyze_graph.py
-          gsutil -m cp  graph.json 'gs://fda_devices/graph.json'
+          echo "Copying graph to gcs"
+          gsutil cp  graph.json 'gs://fda_devices/graph.json'
