feature: Only run CI when the dicom fixtures library changes
<Description>

--- a/.github/workflows/dicom_fixtures.yml
+++ b/.github/workflows/dicom_fixtures.yml
@@ -2,7 +2,10 @@ name: Run tests for the dicom_fixtures library
 
 on:
   pull_request:
-    branches: [master]
+    branches:
+      - master
+    paths:
+      - dicom_fixtures/**
 
 jobs:
   dicom_fixtures_tests:
